export const snapshot = {};

snapshot[`dnsmasq config generation > writes valid dnsmasq configuration for detected KTPs 1`] = `
[
  {
    address: "ktp1.1000.koe.abitti.net",
    alias: "peruna.internal",
    target: "192.168.10.1",
  },
  {
    address: "ktp2.1000.koe.abitti.net",
    alias: "nauris.internal",
    target: "192.168.20.1",
  },
  {
    address: "ktp3.1000.koe.abitti.net",
    alias: "turnipsi.internal",
    target: "192.168.30.1",
  },
]
`;

snapshot[`dnsmasq config generation > writes valid dnsmasq configuration for detected KTPs 2`] = `
"host-record=peruna.internal,192.168.10.1
host-record=nauris.internal,192.168.20.1
host-record=turnipsi.internal,192.168.30.1"
`;

snapshot[`dnsmasq config generation > stores even KTPs that have the same alias declared, but only writes dnsmasq config for ones without duplicates 1`] = `
[
  {
    address: "ktp1.1000.koe.abitti.net",
    alias: "peruna.internal",
    target: "192.168.10.1",
  },
  {
    address: "ktp2.1000.koe.abitti.net",
    alias: "nauris.internal",
    target: "192.168.20.1",
  },
  {
    address: "ktp3.1000.koe.abitti.net",
    alias: "turnipsi.internal",
    target: "192.168.30.1",
  },
  {
    address: "ktp4.1000.koe.abitti.net",
    alias: "peruna.internal",
    target: "192.168.40.1",
  },
]
`;

snapshot[`dnsmasq config generation > stores even KTPs that have the same alias declared, but only writes dnsmasq config for ones without duplicates 2`] = `
"host-record=nauris.internal,192.168.20.1
host-record=turnipsi.internal,192.168.30.1"
`;
